# ZipServer

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/app/: bench.rs  mod.rs  serve.rs  split.rs
src/utils/: index_callback.rs  index_zip.rs  mod.rs
