[package]
name = "zip_handler"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
clap = { version = "4.4.8", features = ["cargo"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rocket = { version = "0.5.0", features = ["json", "secrets", "serde_json", "tls"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
zip = { version = "0.6.6", features = ["flate2", "deflate-zlib"] }

[profile.release]
debug = false
strip = true
# opt-level = 'z'
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'
